# nebulus-edge

./: .ansible-lint  .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  404.html  AI_DIRECTIVES.md  CLAUDE.md  CONTEXT.md  Dockerfile  GEMINI.md  Makefile  README.md  WORKFLOW.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.claude/: README.md  config.json
.github/workflows/: docs.yml  unittests.yml
AI_INSIGHTS/: index.html
ansible/: ansible.cfg  setup_brain.yml  setup_nebulus.yml  setup_workstation.yml
body/: docker-compose.yml
body/functions/: intelligence.py
brain/: requirements.txt  server.py  validate_mlx.py
docs/: AI_INSIGHTS.md  audit_logging.md  feature_template.md  index.md
docs/features/: body_layer_open_webui.md  persistence_layer.md
docs/plans/: 2026-02-02-multi-source-csv-intelligence.md  2026-02-02-nebulus-intelligence-architecture.md
feature_template/: index.html
features/body_layer_open_webui/: index.html
features/persistence_layer/: index.html
infrastructure/: pm2_config.json  start_body.sh  start_brain.sh  start_intelligence.sh
intelligence/: requirements.txt  server.py
intelligence/api/: __init__.py  data.py  feedback.py  insights.py  knowledge.py  query.py
intelligence/core/: __init__.py  audit.py  classifier.py  feedback.py  ingest.py  insights.py  (+8 more)
nebulus_edge/: __init__.py  adapter.py
scripts/: audit_export.py
search/: search_index.json
shared/: __init__.py
tests/: test_adapter.py  test_audit_export.py  test_audit_middleware.py
(+34 files in other folders)
