[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nebulus-edge"
version = "0.1.0"
description = "Edge-deployed AI system with local LLMs and data intelligence"
authors = [{name = "User", email = "labs@example.com"}]
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "nebulus-core",
    "numpy",
    "pandas",
    "scikit-learn",
]

[project.entry-points."nebulus.platform"]
edge = "nebulus_edge.adapter:EdgeAdapter"

[tool.setuptools.packages.find]
include = ["nebulus_edge", "nebulus_edge.*", "intelligence", "intelligence.api", "intelligence.api.*"]

# --- Black Configuration ---
[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | models
  | data
)/
'''

# --- Pytest Configuration ---
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
    "."
]
